docs: add Java 26 and 27 features to Java upgrade guide